--- a/modules/amf-registration/amf-registration-rest/amf-registration-rest-impl/rest-config.yaml
+++ b/modules/amf-registration/amf-registration-rest/amf-registration-rest-impl/rest-config.yaml
@@ -4,6 +4,6 @@ application:
     baseURI: "/amf-registration-rest"
     className: "AmfRegistrationRestApplication"
     name: "AmfRegistrationRest"
-author: "me"
+author: "TalitaFraga"
 clientDir: "../amf-registration-rest-client/src/main/java"
 testDir: "../amf-registration-rest-test/src/testIntegration/java"
