--- a/modules/amf-registration/amf-registration-web/build.gradle
+++ b/modules/amf-registration/amf-registration-web/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
+	compile project(":modules:amf-registration:amf-registration-api")
 	compileOnly group: "com.liferay.portal", name: "release.dxp.api"
 
 	cssBuilder group: "com.liferay", name: "com.liferay.css.builder", version: "3.1.0"
