--- a/modules/amf-registration/amf-registration-web/src/main/resources/content/Language.properties
+++ b/modules/amf-registration/amf-registration-web/src/main/resources/content/Language.properties
@@ -1,2 +1,2 @@
-javax.portlet.title.com_liferay_docs_amf_web_AccountWebPortlet=AccountWeb
-accountweb.caption=Hello from AccountWeb!
+javax.portlet.title.com_liferay_docs_amf_web_AccountWebPortlet=Account
+account.caption=Hello from Account!
